template form과 reactive form 수정

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
         <li><a [routerLink]="['']">About</a></li>
         <li><a [routerLink]="['/carpart']">CarPart</a></li>
         <li><a [routerLink]="['/carrace']">CarRace</a></li>
-        <li><a [routerLink]="['/carpartForm']">CarPartForm</a></li>
+        <li><a [routerLink]="['/carpartTemplateForm']">CarPartTemplateForm</a></li>
+        <li><a [routerLink]="['/carpartReactiveForm']">CarPartReactiveForm</a></li>
       </ul>
     </div>
   </div>
