--- a/src/app/car-part/car-part-templatedriven-form.component.html
+++ b/src/app/car-part/car-part-templatedriven-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<h3 class="text-center"> CarPart Registration1 </h3>
+<h3 class="text-center"> CarPart Registration [Template Form] </h3>
 <form  #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
 
     <table  class="table table-bordered table table-hover">
@@ -33,9 +33,14 @@
         <tr>
             <td>price :</td>
             <td>
-                <input type="number" name="price" ngModel #price="ngModel" required>
-                <div *ngIf="price.touched"  [hidden]="price.valid" style="alert alert-danger">
-                    price is required
+                <input type="number" name="price" ngModel #price="ngModel" required min="500" max="5000">
+                <div *ngIf="price.touched">
+                  <div *ngIf="price.value < 500"  style="alert alert-danger">
+                    500원 이상으로 입력하세요
+                  </div>
+                  <div *ngIf="price.value > 5000"  style="alert alert-danger">
+                    5000원 이하로 입력하세요
+                  </div>
                 </div>
             </td>
         </tr>
@@ -50,7 +55,7 @@
         </tr>
         <tr>
             <td colspan="2"  class="text-center">
-              <button type="submit" class="btn btn-success">Submit</button>
+              <button type="submit" class="btn btn-success" [disabled]="!myForm.form.valid">Submit</button>
             </td>
         </tr>
     </table>
